feat(api-feature-flags, ui-feature-falgs): Simple feature flag UI and service backed by PostgreSQL

--- a/nx.json
+++ b/nx.json
@@ -13,5 +13,13 @@
       "dependsOn": ["^build"]
     }
   },
-  "projects": {}
+  "projects": {
+    "api-feature-flags": {
+      "tags": []
+    },
+    "ui-feature-flags": {
+      "implicitDependencies": ["api-feature-flags"],
+      "tags": []
+    }
+  }
 }
