--- a/packages/api-feature-flags/package.json
+++ b/packages/api-feature-flags/package.json
@@ -1,42 +1,32 @@
 {
   "name": "api-feature-flags",
   "version": "0.0.1",
-  "main": "dist/server.js",
-  "type": "module",
-  "files": [
-    "dist/src"
-  ],
-  "exports": {
-    "./api-routes": {
-      "import": "./dist/src/api-routes.js"
-    },
-    "./server": {
-      "import": "./dist/src/server.js"
-    }
-  },
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "db:reset": "dropdb feature_flags && createdb feature_flags && npm run db:setup",
-    "db:seed": "psql feature_flags < src/seed-data.sql",
-    "db:setup": "psql feature_flags < src/schema.sql",
-    "dev": "tsx src/server.ts",
-    "start": "node dist/server.js",
+    "db:seed": "psql feature_flags < schema/feature-flags.seed-data.sql",
+    "db:setup": "psql feature_flags < schema/feature-flags.schema.sql",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "pg": "^8.11.3",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
     "cors": "^2.8.5",
-    "socket.io": "^4.6.1",
-    "socket.io-client": "^4.8.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/pg": "^8.10.9",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
     "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
     "typescript": "^5.3.3",
-    "tsx": "^4.7.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
